--- a/css/styles.css
+++ b/css/styles.css
@@ -536,6 +536,7 @@ button {
 }
 
 .form-label {
+  line-height: 1.17;
 }
 
 .form-input {
@@ -569,6 +570,7 @@ button {
   border-radius: 4px;
   border: none;
   padding: 8px 24px;
+  font-family: "Roboto", sans-serif;
   background-color: #4d5ae5;
   font-weight: 500;
   font-size: 16px;
