--- a/css/styles.css
+++ b/css/styles.css
@@ -655,7 +655,7 @@ button {
 }
 
 .modal-close-btn:hover {
-  fill: #404bbf;
+  background-color: #404bbf;
 }
 
 .modal-close-icon:hover {
@@ -704,6 +704,10 @@ button {
   padding-left: 38px;
 }
 
+.input-info:focus {
+  border-color: #4d5ae5;
+}
+
 .input-info-icon {
   position: absolute;
   left: 16px;
@@ -730,6 +734,23 @@ button {
   padding: 8px 16px;
   outline: transparent;
   resize: none;
+}
+
+.radio-btn:checked + .privacy-policy-radio-btn .modal-checkbox {
+  background-color: #4d5ae5;
+  border-color: #4d5ae5;
+}
+
+.modal-comment-area::placeholder {
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+
+.modal-comment-area:focus-within {
+  border-color: #4d5ae5;
 }
 
 .modal-radio-checkbox {
@@ -784,4 +805,8 @@ button {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin: 0 auto;
   cursor: pointer;
+}
+
+.modal-btn-send:hover {
+  background-color: #404bbf;
 }
