--- a/css/styles.css
+++ b/css/styles.css
@@ -601,8 +601,8 @@ button {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  visibility: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open {
@@ -642,7 +642,7 @@ button {
   background-color: #e7e9fc;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: none;
+  padding: 0;
   cursor: pointer;
   width: 24px;
   height: 24px;
@@ -651,6 +651,8 @@ button {
 }
 
 .modal-close-icon {
+  width: 8px;
+  height: 8px;
   fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -661,8 +663,9 @@ button {
   border: none;
 }
 
-.modal-close-icon:hover {
-  fill: #fff;
+.modal-close-btn:hover .modal-close-icon,
+.modal-close-btn:focus .modal-close-icon {
+  fill: #ffffff;
 }
 
 .modal-title {
@@ -747,8 +750,8 @@ button {
 }
 
 .radio-btn:checked + .privacy-policy-radio-btn .modal-checkbox {
-  background-color: #4d5ae5;
-  border-color: #4d5ae5;
+  background-color: var(--checkbox-bg, #404bbf);
+  border: none;
   fill: #f4f4fd;
 }
 
